tests/reject/referenceLocal.emojic
🕊 🥓 🍇
  🖍🆕 value 🔢 ⬅️ 123

  🆕🍇🍉

  🐇❗️ 🍳 ➡️ ✴️🥓 🍇
    🆕🥓❗️➡️ bacon
    ↩️ bacon
  🍉
🍉

🏁 🍇

🍉
